# ras_sim_lab

./: .gitattributes  .gitignore  .gitmodules  README.md  deps.repos  env.sh  run.sh  setup.sh
ros2_ws/: test.xml
ros2_ws/src/: .gitignore
ros2_ws/src/oss_core/: CMakeLists.txt  package.xml
ros2_ws/src/oss_core/launch/: main.launch.py
ros2_ws/src/oss_sim/: CMakeLists.txt  package.xml
ros2_ws/src/oss_sim/env-hooks/: oss_sim.dsv.in  oss_sim.sh.in
ros2_ws/src/oss_sim/launch/: main.launch.py
ros2_ws/src/oss_sim/models/Aruco_1/: model.config  model.sdf
ros2_ws/src/oss_sim/models/Aruco_2/: model.config  model.sdf
ros2_ws/src/oss_sim/models/Aruco_3/: model.config  model.sdf
ros2_ws/src/oss_sim/worlds/: 1.sdf  final_setup.sdf  ignition.sdf  lab.sdf
ros2_ws/src/oss_website/: entrypoint.sh  package-lock.json  package.json
ros2_ws/src/ras_app_core/: CMakeLists.txt  package.xml
ros2_ws/src/ras_app_core/launch/: main.launch.py
ros2_ws/src/ras_app_core/ras_app_core/: sim_interface.py
ros2_ws/src/ras_app_core/rviz/: moveit.rviz
ros2_ws/src/ras_app_main/: CMakeLists.txt  package.xml
ros2_ws/src/ras_app_main/launch/: main.launch.py
ros2_ws/src/ras_app_main/scripts/: calibration_target_subscriber.py
ros2_ws/src/ras_core/: CMakeLists.txt  package.xml
ros2_ws/src/ras_core/launch/: main.launch.py
ros2_ws/src/ras_core/ras_core/: sim_interface.py
ros2_ws/src/spawn_gz/: CMakeLists.txt  package.xml
ros2_ws/src/spawn_gz/src/: spawn_model_node.cc
scripts/: env.sh  perception.sh  ras_cli_setup.sh  run.sh  setup.sh
(+22 files in other folders)
